Cancel autoplay muted when visible if the video gets unmuted before being visible.

Otherwise, we end up autoplaying unmuted.

BUG=627451
R=zqzhang@chromium.org

Review-Url: https://codereview.chromium.org/2250393002
Cr-Commit-Position: refs/heads/master@{#412512}

Former-commit-id: c578967369c610605ef62747d0b33f986cab0e23