third_party/WebKit/Source/core/html/HTMLMediaElement.cpp
@@ -2292,6 +2292,7 @@ void HTMLMediaElement::setMuted(bool muted)
         return;
 
     bool wasAutoplayingMuted = !paused() && m_muted && isLockedPendingUserGesture();
+    bool wasPendingAutoplayMuted = m_autoplayVisibilityObserver && paused() && m_muted && isLockedPendingUserGesture();
 
     if (UserGestureIndicator::processingUserGesture())
         unlockUserGesture();
@@ -2312,6 +2313,13 @@ void HTMLMediaElement::setMuted(bool muted)
         } else {
             m_autoplayUmaHelper->recordAutoplayUnmuteStatus(AutoplayUnmuteActionStatus::Success);
         }
+    }
+
+    // If an element was a candidate for autoplay muted but not visible, it will
+    // have a visibility observer ready to start its playback.
+    if (wasPendingAutoplayMuted) {
+        m_autoplayVisibilityObserver->stop();
+        m_autoplayVisibilityObserver = nullptr;
     }
 }
 
